# essentials-of-programming-languages

./: .gitignore  README.md  pyproject.toml
code-along/chapter01/: lamcalc.idr  slist.idr
code-along/chapter02/: let-lang.scm
code-along/chapter03/: cps-in-lang.scm  cps-out-lang.scm  explicit-refs-lang.scm  implicit-refs-lang.scm  let-lang.scm  letrec-lang-cps.scm  letrec-lang.scm  nameless-lang.scm  proc-lang.scm  threads-lang.scm
code-along/chapter07/: checked-lang.scm  inferred-lang.scm
code-along/chapter08/: opaque-types.scm  simple-modules.scm
exercises/: chapter-1.md  chapter01_exercises.idr  chapter02_exercises.idr  exercise02_01.py  exercise02_12.py  exercise02_13.py  exercise02_14.py  exercise02_15.scm  exercise02_16.scm  exercise02_17.scm  exercise02_18.scm  exercise02_19.scm  exercise02_20.idr  exercise02_21.scm  exercise02_22.scm  exercise02_23.scm  exercise02_24.scm  exercise02_25.scm  exercise02_26.scm  exercise02_27.md  exercise02_28.scm  exercise02_29.scm  exercise02_30.scm  exercise02_31.scm  exercise03_01.md  exercise03_02.md  exercise03_03.md  exercise03_06.scm  exercise03_07.scm  exercise03_08.scm  exercise03_09.scm  exercise03_10.scm  exercise03_12.scm  exercise03_13.scm  exercise03_14.scm  exercise03_15.scm  exercise03_16.scm  exercise03_17.scm  exercise03_18.scm  exercise03_19.scm  (+70 more)
exercises/exercise05_21/: Cargo.toml
exercises/exercise05_21/src/: main.rs
exercises/exercise05_22/: Cargo.toml
exercises/exercise05_22/src/: README.md  main.rs
